--- a/paintBrush/src/main/java/lp/paintbrush/tela/FrPaint.form
+++ b/paintBrush/src/main/java/lp/paintbrush/tela/FrPaint.form
@@ -31,16 +31,6 @@
                   </Group>
                   <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                              <Component id="btnSpray" alignment="0" max="32767" attributes="0"/>
-                              <Component id="btnRetangulo" alignment="0" pref="86" max="32767" attributes="0"/>
-                              <Component id="btnCirculo" alignment="0" pref="86" max="32767" attributes="0"/>
-                              <Component id="btnCilindro" alignment="0" pref="86" max="32767" attributes="0"/>
-                              <Component id="btnPonto" alignment="0" pref="86" max="32767" attributes="0"/>
-                              <Component id="btnPiramide" alignment="0" pref="86" max="32767" attributes="0"/>
-                              <Component id="cbArea" max="32767" attributes="0"/>
-                              <Component id="btnPoligono" alignment="0" max="32767" attributes="0"/>
-                          </Group>
                           <Group type="102" attributes="0">
                               <EmptySpace max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
@@ -48,6 +38,20 @@
                                   <Component id="jpCor" min="-2" max="-2" attributes="0"/>
                                   <Component id="jLabel1" alignment="0" min="-2" max="-2" attributes="0"/>
                                   <Component id="jLabel2" alignment="0" min="-2" pref="86" max="-2" attributes="0"/>
+                              </Group>
+                          </Group>
+                          <Group type="102" alignment="0" attributes="0">
+                              <EmptySpace min="-2" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                  <Component id="btnDesenhar" max="32767" attributes="0"/>
+                                  <Component id="btnSpray" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="btnRetangulo" alignment="0" pref="86" max="32767" attributes="0"/>
+                                  <Component id="btnCirculo" alignment="0" pref="86" max="32767" attributes="0"/>
+                                  <Component id="btnCilindro" alignment="0" pref="86" max="32767" attributes="0"/>
+                                  <Component id="btnPonto" alignment="0" pref="86" max="32767" attributes="0"/>
+                                  <Component id="btnPiramide" alignment="0" pref="86" max="32767" attributes="0"/>
+                                  <Component id="cbArea" max="32767" attributes="0"/>
+                                  <Component id="btnPoligono" alignment="0" max="32767" attributes="0"/>
                               </Group>
                           </Group>
                       </Group>
@@ -65,22 +69,24 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="cbArea" pref="24" max="32767" attributes="0"/>
+                      <Component id="cbArea" pref="22" max="32767" attributes="0"/>
                       <EmptySpace min="-2" pref="3" max="-2" attributes="0"/>
-                      <Component id="btnPonto" pref="25" max="32767" attributes="0"/>
+                      <Component id="btnPonto" max="32767" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="btnRetangulo" pref="25" max="32767" attributes="0"/>
+                      <Component id="btnRetangulo" max="32767" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="btnCirculo" pref="25" max="32767" attributes="0"/>
+                      <Component id="btnCirculo" max="32767" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="btnCilindro" pref="25" max="32767" attributes="0"/>
+                      <Component id="btnCilindro" max="32767" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="btnPiramide" pref="25" max="32767" attributes="0"/>
+                      <Component id="btnPiramide" max="32767" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="btnSpray" pref="25" max="32767" attributes="0"/>
+                      <Component id="btnSpray" max="32767" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="btnPoligono" pref="25" max="32767" attributes="0"/>
-                      <EmptySpace pref="61" max="32767" attributes="0"/>
+                      <Component id="btnPoligono" max="32767" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="btnDesenhar" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace pref="54" max="32767" attributes="0"/>
                       <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jpCor" min="-2" max="-2" attributes="0"/>
@@ -88,13 +94,10 @@
                       <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jpCorInterna" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace type="unrelated" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <Group type="102" attributes="0">
-                      <Component id="jpTela" max="32767" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
-                  </Group>
+                  <Component id="jpTela" max="32767" attributes="0"/>
               </Group>
+              <EmptySpace max="-2" attributes="0"/>
               <Component id="jColorChooser" min="-2" pref="281" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
@@ -275,6 +278,14 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnPoligonoActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="btnDesenhar">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Desenhar"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnDesenharActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
