--- a/paintBrush/src/main/java/lp/paintbrush/tela/FrPaint.form
+++ b/paintBrush/src/main/java/lp/paintbrush/tela/FrPaint.form
@@ -24,35 +24,33 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
+              <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="1" attributes="0">
-                  <Group type="102" attributes="0">
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="jColorChooser" pref="991" max="32767" attributes="0"/>
-                  </Group>
+                  <Component id="jColorChooser" pref="987" max="32767" attributes="0"/>
                   <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Group type="102" attributes="0">
-                              <EmptySpace max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="jpCorInterna" min="-2" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                              <Component id="jLabel1" alignment="0" pref="91" max="32767" attributes="0"/>
+                              <Component id="btnRetangulo" alignment="0" pref="91" max="32767" attributes="0"/>
+                              <Component id="btnCirculo" alignment="0" pref="91" max="32767" attributes="0"/>
+                              <Component id="btnCilindro" alignment="0" pref="91" max="32767" attributes="0"/>
+                              <Component id="btnPonto" alignment="0" pref="91" max="32767" attributes="0"/>
+                              <Component id="cbArea" max="32767" attributes="0"/>
+                              <Component id="btnReta" alignment="0" pref="91" max="32767" attributes="0"/>
+                              <Component id="btnBorracha" alignment="0" max="32767" attributes="0"/>
+                              <Component id="btnDesenhar" alignment="1" max="32767" attributes="0"/>
+                              <Component id="btnSpray" max="32767" attributes="0"/>
+                              <Component id="btnPoligono" alignment="1" max="32767" attributes="0"/>
+                              <Component id="btnPiramide" alignment="0" max="32767" attributes="0"/>
+                              <Group type="102" attributes="0">
+                                  <EmptySpace min="6" pref="6" max="-2" attributes="0"/>
                                   <Component id="jpCor" min="-2" max="-2" attributes="0"/>
-                                  <Component id="jLabel1" alignment="0" min="-2" max="-2" attributes="0"/>
-                                  <Component id="jLabel2" alignment="0" min="-2" pref="86" max="-2" attributes="0"/>
                               </Group>
                           </Group>
-                          <Group type="102" alignment="0" attributes="0">
-                              <EmptySpace min="-2" max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                  <Component id="btnDesenhar" max="32767" attributes="0"/>
-                                  <Component id="btnSpray" alignment="0" max="32767" attributes="0"/>
-                                  <Component id="btnRetangulo" alignment="0" pref="86" max="32767" attributes="0"/>
-                                  <Component id="btnCirculo" alignment="0" pref="86" max="32767" attributes="0"/>
-                                  <Component id="btnCilindro" alignment="0" pref="86" max="32767" attributes="0"/>
-                                  <Component id="btnPonto" alignment="0" pref="86" max="32767" attributes="0"/>
-                                  <Component id="btnPiramide" alignment="0" pref="86" max="32767" attributes="0"/>
-                                  <Component id="cbArea" max="32767" attributes="0"/>
-                                  <Component id="btnPoligono" alignment="0" max="32767" attributes="0"/>
-                              </Group>
+                          <Component id="jLabel2" alignment="0" min="-2" pref="86" max="-2" attributes="0"/>
+                          <Group type="102" attributes="0">
+                              <EmptySpace min="6" pref="6" max="-2" attributes="0"/>
+                              <Component id="jpCorInterna" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
@@ -69,9 +67,11 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="cbArea" pref="22" max="32767" attributes="0"/>
+                      <Component id="cbArea" max="32767" attributes="0"/>
                       <EmptySpace min="-2" pref="3" max="-2" attributes="0"/>
                       <Component id="btnPonto" max="32767" attributes="0"/>
+                      <EmptySpace min="-2" pref="9" max="-2" attributes="0"/>
+                      <Component id="btnReta" max="32767" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="btnRetangulo" max="32767" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
@@ -82,11 +82,13 @@
                       <Component id="btnPiramide" max="32767" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="btnSpray" max="32767" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="7" max="-2" attributes="0"/>
                       <Component id="btnPoligono" max="32767" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="btnDesenhar" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace pref="54" max="32767" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="btnBorracha" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
                       <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jpCor" min="-2" max="-2" attributes="0"/>
@@ -94,6 +96,7 @@
                       <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jpCorInterna" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="6" max="-2" attributes="0"/>
                   </Group>
                   <Component id="jpTela" max="32767" attributes="0"/>
               </Group>
@@ -112,6 +115,7 @@
         </Property>
       </Properties>
       <Events>
+        <EventHandler event="mouseDragged" listener="java.awt.event.MouseMotionListener" parameters="java.awt.event.MouseEvent" handler="jpTelaMouseDragged"/>
         <EventHandler event="mousePressed" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jpTelaMousePressed"/>
         <EventHandler event="mouseReleased" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jpTelaMouseReleased"/>
       </Events>
@@ -286,6 +290,25 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnDesenharActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="btnBorracha">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Borracha"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnBorrachaActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="btnReta">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Reta"/>
+        <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
+          <Color id="Hand Cursor"/>
+        </Property>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnRetaActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
